--- a/poc-rabbitmq-nosql/ms-order/src/main/resources/application.yaml
+++ b/poc-rabbitmq-nosql/ms-order/src/main/resources/application.yaml
@@ -6,6 +6,15 @@ spring:
     port: 5672
     username: guest
     password: guest
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 queue:
   order-notification: order-notification-queue
